# app/Models/Utilisateur.php
@@ -64,4 +64,15 @@ class Utilisateur extends Authenticatable
     {
         return $this->status === 'inactif';
     }
+
+    /**
+     * Send the password reset notification.
+     *
+     * @param  string  $token
+     * @return void
+     */
+    public function sendPasswordResetNotification($token)
+    {
+        $this->notify(new \App\Notifications\ResetPasswordNotification($token));
+    }
 }
